fix icons not showing

--- a/styles/scss/layout/sections/_testimonials.scss
+++ b/styles/scss/layout/sections/_testimonials.scss
@@ -22,7 +22,7 @@
    & .testi-container {
       @include flexBox(column, center, center, 2rem);
       padding: 4rem 2rem;
-      background-image: url("../../../../images/icons/testomonial/bg-quotes.png");
+      background-image: url("/images/icons/testomonial/bg-quotes.png");
       background-repeat: no-repeat;
       background-size: 4rem;
       background-position: top 1rem left 1rem;
